11.apr (ws)
      - fix #5289: Multi-measure rest number does not resize with scaling
8.apr (la)
      - add a minimal infrastructure to translate plugins
7.apr (ws)
      - extended script registration: scripts can now register actions and have
        access to the main application window to extend the menu structure.
6.apr (la)
      - handle MIDI IN for special drumkits (patch by Jason Essington)
      - fix #5227: Shortcuts Are Listed From Z-A
      - fix #5180: Copy paste of Chordnames gives uncoherent result
5.apr (ws)
      - fix #5220: Crash when inserting note at end
      - fix #5195: Copy paste disables playback
      - fix #5205: bad matching in "Notehead" in note properties
      (la)
      - Add pageFormat object in plugin framework
      - small patch for Snow Leopard build
      - Synth dialog changed to modal
4.apr (ws)
      - Modified portaudio exit code. Maybe this fixes problems when exiting
        mscore.
      - fix #5189: Corrupted custom beam depending on the platform. The fix
        involves a change in the *.msc[xz] format. Version number increased
        to 1.14.
3.apr (la)
      - add enum for arpeggio types
      - add support for up to down arpeggio (patch from Aaron Epstein)
      - fix #5154 midi input works only on channel 1 (patch by Jason Essington)
2.apr (ws)
      - fix #5177: memory corruption when creating more than four staves/part
      (tb)
      - adding Bulgarian language
1.apr (ws)
      - implemented #4149: Left align lyrics for melismas and tied notes
      - fix #4680: QString conversion of MIDI meta message text needs fixing:
        forgot to copy trailing zero in meta data in Event(const Event&)
      - fix #5155: High CPU Usage When Showing the beginning of a score
        (navigator problem)
31.mar (ws)
      - fix #5152: Crash Opening Full Orchestra MusicXML
      - fix #5065: Arpeggio collides with accidental
      - fix #5096-2: Grace notes not erased on paste