@@ -1,4 +1,6 @@
 11.apr (ws)
+      - fix #5204: The offsets of tempo changes get calculated without
+        regard to repeats when exporting midi files
       - fix #5289: Multi-measure rest number does not resize with scaling
 8.apr (la)
       - add a minimal infrastructure to translate plugins
